Clicking on frame indicator when Timeline scrollbar is hidden sometimes still triggers it. #129478
Labels
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset System
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Code Documentation
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Viewport & EEVEE
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Asset Browser Project
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Module
Viewport & EEVEE
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Severity
High
Severity
Low
Severity
Normal
Severity
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
No due date set.
Dependencies
No dependencies set.
Reference: blender/blender#129478
Loading…
Reference in New Issue
Block a user
No description provided.
Delete Branch "%!s()"
Deleting a branch is permanent. Although the deleted branch may continue to exist for a short time before it actually gets removed, it CANNOT be undone in most cases. Continue?
System Information
Operating system: Windows-10-10.0.19045-SP0 64 Bits
Graphics card: Quadro P2000/PCIe/SSE2 NVIDIA Corporation 4.6.0 NVIDIA 566.03
Blender Version
Broken: version: 4.4.0 Alpha, branch: main, commit date: 2024-10-27 22:52, hash:
c72076aec850
Worked: (newest version of Blender that worked as expected)
Short description of error
Clicking on the frame indicator when Timeline scrollbar is hidden (#126806) sometimes still triggers it.
Exact steps for others to reproduce the error
Open Blender with the timeline editor open, shrink it until the horizontal scrollbar is hidden, then click to move the frame indicator.
I can confirm this behaviour. But I'm a little unsure if it's expected.
The change indicates the scroll bar is hidden, but does not clarify if the scroll bar is no longer interactable.
I'll mark as confirmed, and CC @pablovazquez to confirm if this behaviour is desired and @Harley as the developer (but they are away on holiday this week.)
Can confirm this behaviour is not desired. As a general rule there shouldn't be invisible controllers.
If the scrollbar is hidden it shouldn't scroll on click, the seek bar should be clickable.
This is a fix for 4.3, if possible, since it is when the auto-hide scrollbar feature was introduced.
As a side note, when the scrollbar is hidden you can still scroll by using middle mouse button (as I would expect), so it doesn't remove the functionality, just makes it more predictable IMO.
Was there any follow-up on this? I've been running into the same more lately than I'd like.
It's still marked as confirmed, and bug. Give it time. This was reported right after Blender Conference, prior to a major release, so it's expected to take time to be looked at as everyone is busy with the release (or coming back home from traveling to BCON).
@Harley is this something you can have a look at? Might be a good one for a potential 4.3.1 release.