Fix #129478: Remove Timeline Scrollbars For Tiny Areas

#126806 stopped the drawing of horizontal scrollbars when the areas
were very short. However this still left their hit areas still
active. This PR properly removes the scrollbar in this situation by
also changing the v2d.scroll flags.

Pull Request: https://projects.blender.org/blender/blender/pulls/130764